# pywidget

./: .gitignore  COLLABORATION.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy-wasm.yml  generate-examples.yml
binder/: requirements.txt
docs/invent_demo_wasm/: index.html
examples/: GALLERY_PLAN.md  README.md  heat_index.ipynb  heat_index_colab.ipynb  heat_index_mo.py  image_carousel.ipynb  image_carousel_colab.ipynb  image_carousel_mo.py  interactive_matplotlib.ipynb  interactive_matplotlib_colab.ipynb  interactive_matplotlib_mo.py  invent_demo_mo.py  kmeans.ipynb  kmeans_colab.ipynb  kmeans_mo.py  mandelbrot.ipynb  mandelbrot_colab.ipynb  mandelbrot_mo.py  opencv_playground.ipynb  opencv_playground_colab.ipynb  opencv_playground_mo.py  pii_scrubber.ipynb  pii_scrubber_colab.ipynb  pii_scrubber_mo.py  pywidget_demo.ipynb  pywidget_demo_colab.ipynb  pywidget_demo_mo.py  pywidget_marimo_demo.py
examples/myst/: index.md  myst.yml
js/: package.json  pywidget-bridge.mjs
pywidget/: __init__.py  _bridge.js  image_carousel.py  pywidget.py
scripts/: generate_examples.py
skill/: SKILL.md  examples.md
tests/: test_image_carousel.py  test_pywidget.py
