[project]
name = "pywidget"
version = "0.1.0"
description = "Jupyter widgets with pure Python rendering via Pyodide"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Konstantin Taletskiy" }]
dependencies = [
  "anywidget>=0.9.0",
]

[project.urls]
homepage = "https://github.com/ktaletsk/pywidget"
repository = "https://github.com/ktaletsk/pywidget"

[project.optional-dependencies]
dev = [
  "jupyterlab>=4.0.0",
  "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pywidget"]

# https://docs.pytest.org/en/latest/customize.html
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
log_cli_level = "INFO"
addopts = ["-ra", "--strict-markers", "--strict-config"]
